--- a/Kotomi/Kotomi.iOS/Kotomi.iOS.csproj
+++ b/Kotomi/Kotomi.iOS/Kotomi.iOS.csproj
@@ -5,15 +5,15 @@
     <SupportedOSPlatformVersion>10.0</SupportedOSPlatformVersion>
     <ProvisioningType>manual</ProvisioningType>
     <Nullable>enable</Nullable>
-    <RuntimeIdentifier>iossimulator-x64</RuntimeIdentifier>
-    
+    <!--<RuntimeIdentifier>iossimulator-x64</RuntimeIdentifier>-->
+    <ApplicationId>moe.squidhouse.Kotomi</ApplicationId>
+
     <!-- These properties need to be set in order to run on a real iDevice -->
-    <!--<RuntimeIdentifier>ios-arm64</RuntimeIdentifier>-->
-    <!--<CodesignKey></CodesignKey>-->
+    <RuntimeIdentifier>ios-arm64</RuntimeIdentifier>
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="Avalonia.iOS" Version="11.0.4" />
+    <PackageReference Include="Avalonia.iOS" Version="11.0.6" />
   </ItemGroup>
 
   <ItemGroup>
