--- a/Kotomi/Kotomi/Kotomi.csproj
+++ b/Kotomi/Kotomi/Kotomi.csproj
@@ -17,5 +17,6 @@
     <!--Condition below is needed to remove Avalonia.Diagnostics package from build output in Release configuration.-->
     <PackageReference Condition="'$(Configuration)' == 'Debug'" Include="Avalonia.Diagnostics" Version="11.0.6" />
     <PackageReference Include="CommunityToolkit.Mvvm" Version="8.2.2" />
+    <PackageReference Include="LiteDB" Version="5.0.17" />
   </ItemGroup>
 </Project>
