--- a/Kotomi/Kotomi/Kotomi.csproj
+++ b/Kotomi/Kotomi/Kotomi.csproj
@@ -19,6 +19,7 @@
     <PackageReference Condition="'$(Configuration)' == 'Debug'" Include="Avalonia.Diagnostics" Version="11.2.3" />
     <PackageReference Include="CommunityToolkit.Mvvm" Version="8.4.0" />
     <PackageReference Include="Newtonsoft.Json" Version="13.0.3" />
+    <PackageReference Include="Realm" Version="20.1.0" />
   </ItemGroup>
 
   <ItemGroup>
